<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextCountry"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextCity"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonInsertRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonInsertRecord" />

    <Button
        android:id="@+id/buttonReadData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonReadData" />

    <Button
        android:id="@+id/buttonUpdateRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonUpdateRecord" />

    <Button
        android:id="@+id/buttonDeleteRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonDeleteRecord" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewResult" />
</LinearLayout>